--- a/src/app/auth/sign-in/sign-in.component.css
+++ b/src/app/auth/sign-in/sign-in.component.css
@@ -1,3 +1,34 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:500);
+
+.all-container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: auto;
+  min-height: 100%;
+  background: rgb(167, 161, 255);
+  background: linear-gradient(49deg, rgba(167, 161, 255, 1) 0%, rgba(119, 119, 255, 1) 46%, rgba(0, 212, 255, 1) 100%);
+}
+
+.content {
+  min-height: 90vh;
+  margin: auto;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.65);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18)
+}
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*height: 200px;*/
+  border: 3px solid green;
+}
+
 button {
   background-color: #5eccd6;
   border-radius: 20px;
@@ -10,8 +41,8 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 200px;
-  width: 300px;
+  /*height: 200px;*/
+  /*width: 300px;*/
 }
 
 mat-form-field {
@@ -56,7 +87,6 @@ p {
   border-radius: 10px;
   box-shadow: 0 0 20px 2px #e4e4e4;
   display: flex;
-  width: 60%;
 }
 
 .text-container {
@@ -78,8 +108,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 80px;
-  width: 70%;
+  width: 100%;
 }
 
 .text-container h1 {
@@ -89,4 +118,47 @@ p {
 .text-container button {
   background-color: transparent;
   border: 1px solid #fff;
+}
+
+.google-btn {
+  width: 184px;
+  height: 42px;
+  background-color: #4285f4;
+  border-radius: 2px;
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .25)
+}
+
+.google-btn:hover {
+  box-shadow: 0 0 6px #4285f4;
+}
+
+.google-btn:active {
+  background: #1669F2;
+}
+
+.google-icon-wrapper {
+  position: absolute;
+  margin-top: 1px;
+  margin-left: 1px;
+  width: 40px;
+  height: 40px;
+  border-radius: 2px;
+  background-color: #fff;
+}
+
+.google-icon {
+  position: absolute;
+  margin-top: 11px;
+  margin-left: 11px;
+  width: 18px;
+  height: 18px;
+}
+
+.btn-text {
+  float: right;
+  margin: 11px 11px 0 0;
+  color: #fff;
+  font-size: 14px;
+  letter-spacing: 0.2px;
+  font-family: "Roboto", serif;
 }
