--- a/src/app/races/dashboard/dashboard.component.css
+++ b/src/app/races/dashboard/dashboard.component.css
@@ -20,13 +20,19 @@
   padding-bottom: 10px;
   margin: auto;
   min-height: 100%;
-  background: rgb(167, 161, 255);
-  background: linear-gradient(49deg, rgba(167, 161, 255, 1) 0%, rgba(119, 119, 255, 1) 46%, rgba(0, 212, 255, 1) 100%);
+  background: #abd1c6;
 }
 
 mat-card {
-  border-radius: 0 0 10px 10px;
   margin-bottom: 15px;
+}
+
+.example-section {
+  margin: 12px 0;
+}
+
+.example-margin {
+  margin: 0 12px;
 }
 
 .top-bar-color {
@@ -40,8 +46,8 @@ mat-card {
   min-height: 90vh;
   margin: auto;
   padding: 16px;
-  background: rgba(0, 0, 0, 0.65);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  /*background: rgba(0, 0, 0, 0.65);*/
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   border-radius: 10px;
