--- a/src/app/auth/sign-in/sign-in.component.css
+++ b/src/app/auth/sign-in/sign-in.component.css
@@ -1,164 +1,271 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:500);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
 
 .all-container {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin: auto;
+  display: flex;
   min-height: 100%;
-  background: rgb(167, 161, 255);
-  background: linear-gradient(49deg, rgba(167, 161, 255, 1) 0%, rgba(119, 119, 255, 1) 46%, rgba(0, 212, 255, 1) 100%);
+  background: #00473e;
 }
 
-.content {
-  min-height: 90vh;
+.all-content {
   margin: auto;
-  padding: 16px;
-  background: rgba(0, 0, 0, 0.65);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18)
 }
 
-.center-container {
+.container {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background: #f6f5f7;
   display: flex;
   justify-content: center;
   align-items: center;
-  /*height: 200px;*/
-  border: 3px solid green;
-}
-
-button {
-  background-color: #5eccd6;
-  border-radius: 20px;
-  color: #fff;
-  padding: 0 50px;
-}
-
-form {
-  align-items: center;
-  display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  /*height: 200px;*/
-  /*width: 300px;*/
-}
-
-mat-form-field {
-  width: 100%;
-}
-
-a {
-  color: #838383;
-  margin-top: 30px;
-  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  height: 100vh;
+  margin: -20px 0 50px;
 }
 
 h1 {
-  color: #5eccd6;
-  font-weight: bolder;
-  margin-bottom: 20px;
+  font-weight: bold;
+  margin: 0;
 }
 
-h5 {
-  color: #838383;
+h2 {
+  text-align: center;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  margin: 20px 0 30px;
+}
+
+span {
+  font-size: 12px;
+}
+
+a {
+  color: #333;
+  font-size: 14px;
+  text-decoration: none;
+  margin: 15px 0;
 }
 
 button {
   border-radius: 20px;
-  margin: 20px;
-  padding: 0 50px;
+  border: 1px solid #00332c;
+  background-color: #faae2b;
+  color: #00332c;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
 }
 
-p {
-  margin-bottom: 20px;
+button:active {
+  transform: scale(0.95);
+}
+
+button:focus {
+  outline: none;
+}
+
+button.ghost {
+  background-color: transparent;
+  border-color: #FFFFFF;
+}
+
+form {
+  background-color: #f2f7f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
   text-align: center;
 }
 
-.background {
-  align-items: center;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-}
-
-.login-container {
-  border-radius: 10px;
-  box-shadow: 0 0 20px 2px #e4e4e4;
-  display: flex;
-}
-
-.text-container {
-  align-items: center;
-  background-color: #5eccd6;
-  border-radius: 10px 0 0 10px;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 50px;
-  width: 30%;
-}
-
-.form-container {
-  align-items: center;
-  background-color: #fff;
-  border-radius: 0 10px 10px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+input {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
   width: 100%;
 }
 
-.text-container h1 {
-  color: #fff;
+.container {
+  background-color: #00473e;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+  0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
 }
 
-.text-container button {
-  background-color: transparent;
-  border: 1px solid #fff;
-}
-
-.google-btn {
-  width: 184px;
-  height: 42px;
-  background-color: #4285f4;
-  border-radius: 2px;
-  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .25)
-}
-
-.google-btn:hover {
-  box-shadow: 0 0 6px #4285f4;
-}
-
-.google-btn:active {
-  background: #1669F2;
-}
-
-.google-icon-wrapper {
+.form-container {
   position: absolute;
-  margin-top: 1px;
-  margin-left: 1px;
-  width: 40px;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+  left: 0;
+  width: 100%;
+  z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+  transform: translateX(100%);
+}
+
+.sign-up-container {
+  left: 0;
+  width: 100%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: show 0.6s;
+}
+
+@keyframes show {
+  0%, 49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  50%, 100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+
+.overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.container.right-panel-active .overlay-container {
+  transform: translateX(-100%);
+}
+
+.overlay {
+  background: #FF416C;
+  background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+  background: linear-gradient(to right, #FF4B2B, #FF416C);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #FFFFFF;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+  transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
+
+.social-container {
+  margin: 20px 0;
+}
+
+.social-container a {
+  border: 1px solid #DDDDDD;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5px;
   height: 40px;
-  border-radius: 2px;
-  background-color: #fff;
+  width: 40px;
 }
 
-.google-icon {
-  position: absolute;
-  margin-top: 11px;
-  margin-left: 11px;
-  width: 18px;
-  height: 18px;
-}
-
-.btn-text {
-  float: right;
-  margin: 11px 11px 0 0;
+footer {
+  background-color: #222;
   color: #fff;
   font-size: 14px;
-  letter-spacing: 0.2px;
-  font-family: "Roboto", serif;
+  bottom: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 999;
+}
+
+footer p {
+  margin: 10px 0;
+}
+
+footer i {
+  color: red;
+}
+
+footer a {
+  color: #3c97bf;
+  text-decoration: none;
 }
