Multiple panels expanded

--- a/src/app/races/dashboard/dashboard.component.css
+++ b/src/app/races/dashboard/dashboard.component.css
@@ -1,7 +1,11 @@
 .example-headers-align {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  /*margin-top: 10px !important;*/
+  margin-bottom: 10px !important;
 }
+
+/*.mat-expanded {*/
+/*  margin-bottom: 10px !important;*/
+/*}*/
 
 .main-content {
   padding-top: 16px;
