--- a/src/app/races/add-race/add-race.component.html
+++ b/src/app/races/add-race/add-race.component.html
@@ -1,4 +1,5 @@
-<h2 mat-dialog-title>Añadir Carrera</h2>
+<h2 *ngIf="data.action === 'add'" mat-dialog-title>Añadir Carrera</h2>
+<h2 *ngIf="data.action === 'edit'" mat-dialog-title>Editar Carrera</h2>
 
 <mat-dialog-content>
   <div class="example-container">
@@ -10,6 +11,7 @@
         </mat-form-field>
 
         <mat-form-field class="form-field" appearance="outline">
+          <mat-label>Fecha de la carrera</mat-label>
           <input formControlName="date" matInput [matDatepicker]="picker" placeholder="Fecha de la carrera">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker touchUi="true" #picker></mat-datepicker>
@@ -32,5 +34,6 @@
 
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button color="primary" [mat-dialog-close]="true" (click)="submitRaceData()" cdkFocusInitial>Añadir</button>
+  <button *ngIf="data.action === 'edit'" mat-button color="primary" [mat-dialog-close]="true" (click)="submitEditRaceData()" cdkFocusInitial>Editar</button>
+  <button *ngIf="data.action === 'add'" mat-button color="primary" [mat-dialog-close]="true" (click)="submitRaceData()" cdkFocusInitial>Añadir</button>
 </mat-dialog-actions>
