--- a/src/app/races/dashboard/dashboard.component.html
+++ b/src/app/races/dashboard/dashboard.component.html
@@ -1,27 +1,6 @@
 <div class="all-container">
   <div fxFlex="70%" fxFlex.xs="95%" fxFlex.sm="95%" class="content">
-    <mat-toolbar class="toolbar">
-      <span>Hi {{localstorageJSON.displayName}}! 👋</span>
-      <span class="example-spacer"></span>
-      <!--      <div-->
-      <!--        [matMenuTriggerFor]="menu"-->
-      <!--        mat-card-avatar class="example-header-image"-->
-      <!--           [ngStyle]="{'background-image': 'url(' + localstorageJSON.photoURL + ')'}">-->
-      <!--      </div>-->
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-        <mat-icon>more_vert</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="openRaceDialog('add')">
-          <mat-icon>add</mat-icon>
-          <span>Add Race</span>
-        </button>
-        <button mat-menu-item (click)="authService.signOut()">
-          <mat-icon>logout</mat-icon>
-          <span>Log Out</span>
-        </button>
-      </mat-menu>
-    </mat-toolbar>
+    <app-responsive-toolbar></app-responsive-toolbar>
     <div fxLayout="row wrap" fxLayoutGap="16px grid" class="main-content">
       <div *ngIf="loading" class="loading">
         <mat-spinner></mat-spinner>
