--- a/src/app/races/dashboard/dashboard.component.html
+++ b/src/app/races/dashboard/dashboard.component.html
@@ -2,9 +2,9 @@
   <div fxFlex="70%" fxFlex.xs="95%" fxFlex.sm="95%" class="content">
     <app-responsive-toolbar></app-responsive-toolbar>
     <div fxLayout="row wrap" fxLayoutGap="16px grid" class="main-content">
-      <!--      <div *ngIf="loading" class="loading">-->
-      <!--        <mat-spinner></mat-spinner>-->
-      <!--      </div>-->
+            <div *ngIf="loading" class="loading">
+              <mat-spinner></mat-spinner>
+            </div>
       <mat-accordion class="example-headers-align" fxFlex="100%" fxFlex.xs="100%" fxFlex.sm="100%" multi>
         <div>
           <mat-expansion-panel
@@ -29,7 +29,7 @@
               </mat-panel-description>
             </mat-expansion-panel-header>
             <div fxLayout="row wrap" fxLayoutGap="16px grid" fxLayoutAlign="space-evenly">
-              <div *ngFor="let race of year.races">
+              <div *ngFor="let race of year.races" fxFlex="30%" fxFlex.xs="100%" fxFlex.sm="100%">
                 <app-race-card [race]="race"></app-race-card>
               </div>
             </div>
