--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,32 +1,20 @@
-<div class="all-content">
-  <div class="container" id="container">
-    <div class="form-container sign-in-container">
-      <form action="#">
-        <h1>Sign in</h1>
-        <div class="social-container">
-          <cool-google-button color="dark">
-            Login with Google
-          </cool-google-button>
-        </div>
-        <span>or use your account</span>
-        <input type="email" placeholder="Email"/>
-        <input type="password" placeholder="Password"/>
-        <a href="#">Forgot your password?</a>
-        <button>Sign In</button>
-      </form>
-    </div>
-    <div class="overlay-container">
-      <div class="overlay">
-        <div class="overlay-panel overlay-left">
-          <h1>Welcome Back!</h1>
-          <p>To keep connected with us please login with your personal info</p>
-          <button class="ghost" id="signIn">Sign In</button>
-        </div>
-        <div class="overlay-panel overlay-right">
-          <h1>Hello, Friend!</h1>
-          <p>Enter your personal details and start journey with us</p>
-          <button class="ghost" id="signUp">Sign Up</button>
-        </div>
+<div class="all-container">
+  <div class="all-content">
+    <div class="container" id="container">
+      <div class="form-container sign-in-container">
+        <form action="#">
+          <h1>Sign in</h1>
+          <div class="social-container">
+            <cool-google-button color="dark">
+              Login with Google
+            </cool-google-button>
+          </div>
+          <span>or use your account</span>
+          <input type="email" placeholder="Email"/>
+          <input type="password" placeholder="Password"/>
+          <a href="#">Forgot your password?</a>
+          <button>Sign In</button>
+        </form>
       </div>
     </div>
   </div>
