--- a/src/app/races/add-race/add-race.component.html
+++ b/src/app/races/add-race/add-race.component.html
@@ -24,7 +24,7 @@
 
         <mat-form-field class="form-field" appearance="outline">
           <mat-label>Tiempo (hh:mm:ss)</mat-label>
-          <input type="time" matInput formControlName="time" required>
+          <input step="2" type="time" matInput formControlName="time" required>
         </mat-form-field>
 
         <mat-form-field class="form-field" appearance="outline">
