--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,19 +1,19 @@
 <div class="all-container">
-  <div class="all-content">
+  <div class="all-content" fxFlex="40%" fxFlex.xs="90%" fxFlex.sm="90%">
     <div class="container" id="container">
       <div class="form-container sign-in-container">
         <form action="#">
-          <h1>Sign in</h1>
+          <h1>Sign Up</h1>
           <div class="social-container">
-            <cool-google-button color="dark">
-              Login with Google
+            <cool-google-button color="dark" (click)="authService.googleAuth()">
+              Continue with Google
             </cool-google-button>
           </div>
-          <span>or use your account</span>
-          <input type="email" placeholder="Email"/>
-          <input type="password" placeholder="Password"/>
-          <a href="#">Forgot your password?</a>
-          <button>Sign In</button>
+          <span>or create your account</span>
+          <input type="email" placeholder="Email" #email />
+          <input type="password" placeholder="Password" #password />
+          <a routerLink="/sign-in">Already have an account?</a>
+          <button (click)="authService.signUp(email.value, password.value)">Create</button>
         </form>
       </div>
     </div>
